# classic-wheeled-robot

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  Doxyfile  README.md
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
ci/: check_imported_deps.py  check_launch_deps.py  check_static_deps.py  docs.sh  pixi.toml
docs/: index.html
docs/doxygen/html/: annotated.html  annotated_dup.js  class_drive_bot_test-members.html  class_drive_bot_test.html  class_drive_bot_test.js  class_find_ball_region_test-members.html  class_find_ball_region_test.html  class_process_image_integration_test-members.html  class_process_image_integration_test.html  class_process_image_integration_test.js  class_process_image_test-members.html  class_process_image_test.html  class_process_image_test.js  classes.html  classrobot__control_1_1ball__chaser_1_1_drive_bot-members.html  classrobot__control_1_1ball__chaser_1_1_drive_bot.html  classrobot__control_1_1ball__chaser_1_1_drive_bot.js  classrobot__control_1_1ball__chaser_1_1_process_image-members.html  classrobot__control_1_1ball__chaser_1_1_process_image.html  classrobot__control_1_1ball__chaser_1_1_process_image.js  dir_0454c68e76c386a5fd40958ad4e6652f.html  dir_0fe6b74a81203eccfd5f8bee6b991644.html  dir_0fe6b74a81203eccfd5f8bee6b991644.js  dir_22020c7d85f2098d2f439dad34310df7.html  dir_22020c7d85f2098d2f439dad34310df7.js  dir_2ee0e481386ad1f196b7ec16375174ba.html  dir_2ee0e481386ad1f196b7ec16375174ba.js  dir_3a42acb2ba64f72681174b75dbeafd40.html  dir_3a42acb2ba64f72681174b75dbeafd40.js  dir_4aa983c870418fd8b212a674550f906e.html  dir_514eac671d96e31a1200485a19f4786d.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_6a673c6fd829a9d2d34440c0f4e33dcd.html  dir_6a673c6fd829a9d2d34440c0f4e33dcd.js  dir_73e46038bee982a41e6117eb2660d5c9.html  dir_73e46038bee982a41e6117eb2660d5c9.js  dir_7619461ed2a2917c624bac796870d45d.html  dir_7619461ed2a2917c624bac796870d45d.js  dir_849c3e21b201cb05315bdc27e8aa7699.html  (+86 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_3.js  enums_0.js  enumvalues_0.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_3.js  namespaces_4.js  searchdata.js  typedefs_0.js  (+6 more)
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/config/: controllers.yaml
my_robot_bringup/launch/: display.launch.py  display.rviz  gazebo_server.launch.py  robot_core.launch.py
my_robot_bringup/tests/integration/: conftest.py  test_controllers_config.py
my_robot_description/: CMakeLists.txt  package.xml
my_robot_description/config/: controllers.yaml  joint_limits.yaml
my_robot_description/tests/integration/: conftest.py  test_controllers_config.py
my_robot_description/urdf/: my_robot.urdf.xacro
my_robot_description/urdf/base/: base.gazebo.xacro  base.ros2_control.xacro  base.xacro
my_robot_description/urdf/sensors/: lidar.gazebo.xacro  lidar.xacro
my_robot_description/urdf/wheels/: caster.xacro  wheel.gazebo.xacro
robot_bringup/: CMakeLists.txt  package.xml
robot_bringup/launch/: display.launch.py  robot_core.launch.py
robot_description/: CMakeLists.txt
robot_description/tests/integration/: conftest.py  test_xacro.py
robot_description/urdf/common/: robot_properties.xacro
robot_description/urdf/sensors/: camera.gazebo.xacro  camera.xacro
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/srv/: DriveToTarget.srv
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/launch/: display.launch.py  display.rviz  gazebo.launch.py  gazebo_server.launch.py  robot_core.launch.py
src/robot_bringup/tests/integration/: conftest.py  test_controllers_config.py
src/robot_control/: CMakeLists.txt  package.xml
src/robot_control/include/ball_chaser/: image_utils.hpp  namespace.hpp
src/robot_control/include/clients/ball_chaser/: process_image_node.hpp
src/robot_control/include/servers/ball_chaser/: drive_bot_node.hpp
src/robot_control/src/: CMakeLists.txt
src/robot_control/src/ball_chaser/: image_utils.cpp
src/robot_control/src/clients/ball_chaser/: process_image_main.cpp  process_image_node.cpp
src/robot_control/src/servers/ball_chaser/: drive_bot_main.cpp  drive_bot_node.cpp
src/robot_control/test/ball_chaser/: test_drive_bot.cpp
src/robot_control/tests/: CMakeLists.txt
src/robot_control/tests/integration/ball_chaser/: test_drive_bot.cpp  test_process_image.cpp
src/robot_control/tests/unit/ball_chaser/: test_image_utils.cpp
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: controllers.yaml  diff_drive_controller.yaml
src/robot_description/tests/integration/: conftest.py  test_urdf_valid.py  test_xacro.py
src/robot_description/urdf/: my_robot.urdf.xacro  robot.gazebo.urdf.xacro  robot.urdf.xacro
src/robot_description/urdf/base/: base.gazebo.xacro  base.ros2_control.xacro  base.xacro
src/robot_description/urdf/common/: robot_properties.xacro
src/robot_description/urdf/sensors/: camera.gazebo.xacro  camera.xacro  lidar.gazebo.xacro  lidar.xacro
src/robot_description/urdf/wheels/: caster.xacro  wheel.gazebo.xacro  wheel.xacro
src/robot_world/: CMakeLists.txt  my-apartment.sdf  package.xml
src/robot_world/models/bed/: model.config  model.sdf
src/robot_world/models/building/: model.config  model.sdf
src/robot_world/models/couch/: model.config  model.sdf
src/robot_world/models/dining_table/: model.config  model.sdf
src/robot_world/models/kitchen_counter/: model.config  model.sdf
src/robot_world/models/kitchen_island/: model.config  model.sdf
